Bug 1789823 - More aggressively request size mode changes if there's a state change request in flight. r=stransky

Depends on D157597

Differential Revision: https://phabricator.services.mozilla.com/D157598